--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -21,3 +21,39 @@
   width: 25%;
   height: 200px;
 }
+.navbar{
+  position: fixed;
+  z-index: 3;
+  background-color: transparent;
+  margin-bottom:-80px !important;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+  min-height: 80px !important;
+  margin-left: 19em;
+}
+.navbar-nav{
+  margin-top: 1em !important;
+}
+.black{
+  position:fixed;
+  top:0;
+  width:100%;
+  height:50px;
+
+  
+}
+img[alt="1"]{
+  filter: brightness(50%);
+  
+}
+img[alt="2"]{
+  filter: brightness(50%);
+  
+}
+img[alt="3"]{
+  filter: brightness(50%);
+  
+}
+img[alt="4"]{
+  filter: brightness(50%);
+  
+}
