--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,4 +1,7 @@
-
+@font-face {
+  font-family: CCFont;
+  src: url(kenyan\ coffee\ rg.ttf);
+}
 
 
 
@@ -25,14 +28,12 @@
   position: fixed;
   z-index: 3;
   background-color: transparent;
-  margin-bottom:-80px !important;
+  
   border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
   min-height: 80px !important;
-  margin-left: 19em;
+
 }
-.navbar-nav{
-  margin-top: 1em !important;
-}
+
 .black{
   position:fixed;
   top:0;
@@ -56,4 +57,111 @@ img[alt="3"]{
 img[alt="4"]{
   filter: brightness(50%);
   
+}
+.contact{
+  background-color: #212121;
+  padding: 40px 20px;
+  line-height: 1.5;
+  width: 100%;
+}
+.background-contact{
+  background-image: url(https://archo-react.vercel.app/assets/img/pg2.jpg);
+    height: 41em;
+    width: 146%;
+    margin-left: -18em;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: brightness(50%);
+}
+.context34{
+color: #fff;
+text-align: center;
+position: absolute;
+    z-index: 3;
+    top: 24em;
+    left: 53em;
+}
+.context34 h1{
+  font-size: 75px;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+.context34 a{
+  color:#fff;
+  line-height: 1.5;
+    font-weight: 400;
+    font-size: 17px !important;
+}
+.context34 a:hover{
+  text-decoration: none;
+  color: #fff;
+}
+.context34 span{
+  color: #fff;
+  margin: 0 20px;
+    font-size: 17px;
+    font-weight: 400;
+}
+.context34 .pathy{
+  color: #c5a47e;
+}
+.context34 .pathy:hover{
+  color: #c5a47e;
+}
+.card i{
+  font-size: 30px;
+  color: #ccc;
+  padding-right: 30px;
+  position: absolute;
+}
+.formula input{
+  padding: 15px;
+    padding-left: 0;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    margin: 0px;
+    color: #fff;
+    font-size:18px;
+    height: 60px;
+}
+.formula input:focus{
+ box-shadow: none;
+ outline: none;
+ border-color: rgba(255, 255, 255, 0.3);
+
+}
+#textAreaExample1{
+  background-color: transparent;
+  color: #fff;
+    font-size:18px;
+    border: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.bbs:hover{
+  background-color: transparent !important;
+}
+.bbs:focus{
+  outline: none !important;
+}
+button.btn.btn-primary.bbs:before {
+  content: "";
+  height: 8px;
+  width: 1px;
+  background: #c5a47e;
+  position: absolute;
+  top: -14px;
+  left: 1px;
+  box-shadow: 0px 66px #c5a47e, 161px 0px #c5a47e, 161px 66px #c5a47e;}
+  button.btn.btn-primary.bbs:after {
+    content: "";
+    height: 1px;
+    width: 8px;
+    background: #c5a47e;
+    position: absolute;
+    top: -1px;
+    left: -12px;
+    box-shadow: 0px 45px #c5a47e, 183px 1px #c5a47e, 183px 45px #c5a47e;
 }
