--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1438,6 +1438,20 @@ height: 700px;
   color: #b19777;
 
 }
+.carousel-control{
+  width: 20px !important;
+    height: 20px;
+    opacity: 1 !important;
+    background: none !important;
+    border: 1px solid #777;
+    border-radius: 50%;
+    position: absolute !important;
+    top: 14em !important;
+}
 .carousel-control:hover{
   opacity: 1 !important;
+  color: #fff !important;
+}
+.glyphicon{
+  color: #fff;
 }
