--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,116 +1,95 @@
-@font-face {
-	font-family: CCFont;
-	src: url(kenyan\ coffee\ rg.ttf);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-  @font-face {
-	font-family: Curve;
-	src: url(Giliams-Regular.ttf);
+
+  .wrapper{
+    position: relative;
+    top: 30px;
+    width: 750px;
+    margin: 0 auto;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.15);
   }
-* {
-	box-sizing: border-box;
+  .wrapper .images{
+    height: 100%;
+    width: 100%;
+    display: flex;
   }
-  
-  img {
-	max-width: 100%;
-	width: 100%;
+  .wrapper .images .img-1{
+    height: 100%;
+    width: 100%;
   }
-  
-  
-  
-  .wrap {
-	position: relative;
-	z-index: 100;
-	width: 100%;
-	padding: 0 60px;
-	overflow: hidden;
+  .wrapper .images .img-2{
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    overflow: hidden;
   }
-  
-  .wrap:after {
-	content:'';
-	position: absolute;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-   
+  .wrapper .slider{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+    height: 100%;
   }
-  
-  .slider {
-	position: relative;
-	z-index: 200;
-	padding: 0 0px;
-	margin: 5rem auto;
-	width: 100%;
+  .wrapper .slider input{
+    width: 100%;
+    outline: none;
+    background: none;
+    -webkit-appearance: none;
   }
-  
-  .slick-arrow {
-	position: absolute;
-	top: 50%;
-	width: 40px;
-	height: 50px;
-	line-height: 50px;
-	margin-top: -25px;
-	border: none;
-	background: transparent;
-	color: #333;
-	font-family: monospace;
-	font-size: 5rem;
-	z-index: 300;
-	outline: none;
+  .slider input::-webkit-slider-thumb{
+    height: 486px;
+    width: 3px;
+    background: none;
+    -webkit-appearance: none;
+    cursor: col-resize;
   }
-  
-  .slick-prev {
-	left: -50px;
-	text-align: left;
-	color: #333 !important;
-	background-color: blue !important;
+
+  .slider .drag-line{
+    width: 3px;
+    height: 486px;
+    position: absolute;
+    left: 49.85%;
+    pointer-events: none;
   }
-  
-  .slick-next {
-	right: -50px;
-	text-align: right;
-	color: #333 !important;
-	background-color: blue !important;
+   .slider .drag-line::before,
+  .slider .drag-line::after{
+    position: absolute;
+    content: "";
+    width: 5px;
+    height: 100%;
+    background: #fff;
   }
-  
-  
-  
-  .item.slick-slide {
-	width: 600px;
-	height: 400px !important;
-	transition: transform .4s;
-	position: relative; 
-	margin:0px 20px;
+   .slider .drag-line span{
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    top: 45%;
+    background-color: transparent;
+    background-image: url();
+    background-repeat: no-repeat;
+    background-position: center;
+	border-radius: 50%;
+	border: 2px solid #fff;
   }
   
-  .slick-slide:after {
-	content:'';
-	position: absolute;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	transition: transform .4s;
-  }
-  .cont{
-	text-align: center;
-  } 
-  .tekofont{
-	color: #b19777;
-    font-weight: 400;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
-	font-family: CCFont;
-  }
-  .playfont{
-	font-weight: 500;
-    font-size: 40px;
-    letter-spacing: 2px;
-	color: #fff;
-	font-family: 'Curve';
-  }
-  
+
+.slider .drag-line span :active{
+    opacity: 0;
+    pointer-events: all;
+}
+.opac {
+    visibility: hidden;
+}
+
+.oopac{
+    opacity: 0;
+}
