--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -33,8 +33,10 @@
 .navbar-nav li a{
   font-size: 13px;
     font-weight: 400;
-    color: #fff;
+    color: #fff ;
     letter-spacing: 1px;
+    padding: 15px 7px;
+    margin: 10px;
    
 }
 .navbar-nav li a:hover{
@@ -50,6 +52,9 @@
   min-height: 80px !important;
 
 }
+.darkHeader{
+  color: black !important;
+}
 
 
 .black{
@@ -60,20 +65,14 @@
 
   
 }
-img[alt="11"]{
-  filter: brightness(50%);
-  
+.carousel-inner .item{
+  height: max-content !important;
 }
-img[alt="22"]{
+
+.car-image-best{
   filter: brightness(50%);
-}
-img[alt="33"]{
-  filter: brightness(50%);
-  
-}
-img[alt="44"]{
-  filter: brightness(50%);
-  
+  width: 100%;
+  height: 100%;
 }
 .contact{
   background-color: #212121;
@@ -1099,7 +1098,7 @@ width:100%;
     z-index: 2;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 26em;
+    height: 38em;
     opacity: 0.2;
     justify-items: center;
     align-items: center;
@@ -1109,8 +1108,8 @@ width:100%;
   height: 100px;
   border-radius: 50%;
   position: relative;
-    top: 12em;
-    left: 73em;
+    top: 17em;
+    left: 14%;
   background: rgb(177, 151, 119);
   opacity: 0.8;
 }
@@ -1474,7 +1473,7 @@ height: 700px;
     background: none !important;
     border-radius: 50%;
     position: absolute !important;
-    top: 26em !important;
+    top: 44% !important;
     width: 55px !important;
     height: 55px;
     line-height: 55px;
@@ -1519,14 +1518,13 @@ height: 700px;
 }
 .social4{
   position: absolute;
-  bottom: -3px;
-  left: -250px;
+  bottom: 2%;
+  left: -14%;
 }
 .carousel-caption{
   position: absolute;
-  top: 22em;
-  
-}
+  top: 28%;
+  }
 *{
   margin: 0;
   padding: 0;
@@ -1680,7 +1678,7 @@ border-radius: 50%;
 }
 .bg-img-bath{
   position: absolute;
-    top:230em;
+    top:351%;
     left: 0;
     width: 100%;
     height: 60%;
@@ -1737,7 +1735,7 @@ border-radius: 50%;
     color: #555;
 }
 .items .slick-slide{
-  width: 550px !important;
+  width: 538px !important;
     height: 347px;
     padding-top: 30px;
     margin-right: 20px;
@@ -1809,7 +1807,7 @@ border-radius: 50%;
     width: 70px;
     height: 42px;
     position: absolute;
-  
+    top: 24%;
 }
 .toyi .slick-next{
   background: #f8f4f3 !important;
@@ -1818,6 +1816,7 @@ border-radius: 50%;
     width: 70px;
     height: 42px;
     position: absolute;
+    top: 24%;
 }
 .toyi .slick-next::before{
   color: #212121;
@@ -1841,5 +1840,32 @@ border-radius: 50%;
   color: #fff !important;
 }
 .change-back{
-  background: #181818 !important;
+  background: #181818 !important;}
+.dropdown-toggle::after{
+  border: 0px !important;
+}
+.dropdown .dropdown-toggle:hover{
+text-decoration: none;
+}
+.dropdown-menu li a:hover{
+  color: #b19777 !important;
+}
+
+.gret:hover::before{
+  content: "";
+  width: 10px;
+  height:2px;
+  background-color: #c5a47e;
+  position:absolute;
+  left: 7px;
+  top: 25px;
+}
+.gret1:hover::before{
+  content: "";
+  width: 10px;
+  height:2px;
+  background-color: #c5a47e;
+  position:absolute;
+  left: 7px;
+  top: 60px;
 }
