--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -19,8 +19,9 @@
   width: 180px;
   height: 180px;
 }
-
-
+body{
+  cursor: none;
+}
 .slide span img{
   width: 25%;
   height: 200px;
@@ -82,9 +83,9 @@
 }
 .background{
   background-image: url(https://archo-react.vercel.app/assets/img/pg2.jpg);
-    height: 41em;
+    height:65vh;
     width: 132%;
-    margin-left: -13em;
+    margin-left: -16%;
     background-repeat: no-repeat;
     background-size: cover;
     filter: brightness(50%);
@@ -94,8 +95,6 @@ color: #fff;
 text-align: center;
 position: absolute;
     z-index: 3;
-    top: 24em;
-    left: 53em;
 }
 .context34 h1{
   font-size: 75px;
@@ -807,7 +806,7 @@ color: #fff;
   text-decoration: none;
 }
 .hover-img{
-  background-color: #212121;
+  background-color: #212121 !important;
   padding: 60px 40px;
 width:100%;
 }
@@ -1351,11 +1350,11 @@ height: 700px;
     text-align: center;
     margin: 0px 24px;
     width: 87%;
-    margin-left: 4%;
+    margin-left: 7%;
     background: #fff;
     z-index: 12;
     position: absolute;
-    margin-top: -46px;
+    margin-top: 74%;
     padding: 40px 30px;
   }
   .laal h5{
@@ -1678,7 +1677,7 @@ border-radius: 50%;
 }
 .bg-img-bath{
   position: absolute;
-    top:351%;
+    top:7%;
     left: 0;
     width: 100%;
     height: 60%;
@@ -1868,4 +1867,127 @@ text-decoration: none;
   position:absolute;
   left: 7px;
   top: 60px;
+}
+html {
+  cursor: url("data:image/svg+xml,%3Csvg height='6' width='6' viewBox='0 0 8 8' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='4' cy='4' fill='%23eee' r='4'/%3E%3C/svg%3E") 3 3, auto;
+}
+
+.stroke-only {
+  fill: none;
+  stroke: #111;
+  stroke-width: 4;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  transition: 600ms transform cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+
+.cursor {
+  
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: var(--width);
+  height: var(--height);
+  transform: translate(calc(var(--x) - var(--width) / 2), calc(var(--y) - var(--height) / 2));
+  /* transition-duration: 125ms;
+  transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition-property: width, height, transform; */
+  transition: 150ms width cubic-bezier(0.39, 0.575, 0.565, 1),
+              150ms height cubic-bezier(0.39, 0.575, 0.565, 1),
+              150ms transform cubic-bezier(0.39, 0.575, 0.565, 1);
+  z-index: 1;
+  pointer-events: none;
+  will-change: transform;
+}
+@media (pointer: fine) {
+  .cursor {
+    display: block;
+  }
+}
+.cursor::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: var(--radius);
+  border: 2px solid #c5a47e;
+  opacity: var(--scale);
+  -webkit-transform: scale(var(--scale));
+          transform: scale(var(--scale));
+  transition: 300ms opacity cubic-bezier(0.39, 0.575, 0.565, 1),
+              300ms transform cubic-bezier(0.39, 0.575, 0.565, 1),
+              150ms border-radius cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+html:not(html:hover) .cursor::after {
+  opacity: 0;
+  transform: scale(0);
+}
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  margin: -76px 0 0 -76px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+#loader1 {
+  position: absolute;
+  left: 46%;
+    top: 27%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  color: #3498db;
+}
+#biggest-loader{
+  width:100vw;
+  height:100%;
+  background-color:#f7d63b;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s;
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+.bzz::before{
+  content: "";
+  background-image: url(../img/dots.png);
+  background-repeat: repeat;
+  filter: brightness(10%);
 }
