--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,122 +1,62 @@
-<<<<<<< HEAD
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  .wrapper{
-    position: relative;
-    top: 30px;
-    width: 750px;
-    margin: 0 auto;
-    overflow: hidden;
-    background: #fff;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.15);
-  }
-  .wrapper .images{
-    height: 100%;
-    width: 100%;
-    display: flex;
-  }
-  .wrapper .images .img-1{
-    height: 100%;
-    width: 100%;
-  }
-  .wrapper .images .img-2{
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    overflow: hidden;
-  }
-  .wrapper .slider{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 99;
-    height: 100%;
-  }
-  .wrapper .slider input{
-    width: 100%;
-    outline: none;
-    background: none;
-    -webkit-appearance: none;
-  }
-  .slider input::-webkit-slider-thumb{
-    height: 486px;
-    width: 3px;
-    background: none;
-    -webkit-appearance: none;
-    cursor: col-resize;
-  }
-
-  .slider .drag-line{
-    width: 3px;
-    height: 486px;
-    position: absolute;
-    left: 49.85%;
-    pointer-events: none;
-  }
-   .slider .drag-line::before,
-  .slider .drag-line::after{
-    position: absolute;
-    content: "";
-    width: 5px;
-    height: 100%;
-    background: #fff;
-  }
-   .slider .drag-line span{
-    height: 30px;
-    width: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9;
-    top: 45%;
-    background-color: transparent;
-    background-image: url();
-    background-repeat: no-repeat;
-    background-position: center;
-	border-radius: 50%;
-	border: 2px solid #fff;
-  }
-  
-
-.slider .drag-line span :active{
-    opacity: 0;
-    pointer-events: all;
-}
-.opac {
-    visibility: hidden;
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  margin: -76px 0 0 -76px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
-.oopac{
-    opacity: 0;
+#loader1 {
+  position: absolute;
+  left: 46%;
+    top: 27%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  color: #3498db;
 }
-=======
-body{
-  margin:0;
-  padding:0;
-  height:1000vh;
+#biggest-loader{
+  width:100vw;
+  height:100%;
+  background-color:#f7d63b;
 }
-.black{
-  position:fixed;
-  top:0;
-  background:#333;
-  width:100%;
-  height:50px;
-  
-}
-.black ul{
-  list-style-type:none;
-  padding:0;
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
-.black ul li{
-  display:inline-block;
-  width:100px;
-  color:red;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
->>>>>>> 48fbbf148cb6841efe90eb96408dc3f954dc0b71
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+}
